<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LunchLunch</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="title_lunch_list">Lunches</string>
    <string name="title_lunch_detail">Lunch Detail</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_error">The email you entered does not exist, please try again.</string>
    <string name="whom">Whom:</string>
    <string name="dateLabel">Date:</string>
    <string name="timeLabel">Time:</string>
    <string name="title_activity_lunch_detail">Lunch Details</string>
    <string name="find_buddy">Find Buddy</string>
    <string name="title_activity_find_lunch_buddy">How About...</string>
    <string name="buddy">Buddy</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="selectDate">Select Date...</string>
    <string name="selectTime">Select Time...</string>
    <string name="sure">Sure!</string>

</resources>
