<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.lunches.LunchDetailFragment" >

    <TextView
        android:id="@+id/whomValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/whomLabel"
        android:layout_alignBottom="@+id/whomLabel"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/whomLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dateValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dateLabel"
        android:layout_alignBottom="@+id/dateLabel"
        android:layout_alignLeft="@+id/whomValueLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/timeValueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timeLabel"
        android:layout_alignBottom="@+id/timeLabel"
        android:layout_alignLeft="@+id/dateValueLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whomLabel"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/whomValueLabel"
        android:text="@string/dateLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/dateLabel"
        android:layout_below="@+id/dateLabel"
        android:layout_marginTop="16dp"
        android:text="@string/timeLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/whomLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="66dp"
        android:text="@string/whom"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>